# blender_addon_link

./: .gitignore  README.md  index.html  package.json  vite.config.js  vite.config.ts
src/: App.vue  BlenderLink.vue  Home.vue  data.ts  main.js  main.ts  stores.ts  vuetify.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/styles/: global.css
src/components/: AddBlenderVersion.vue  BlenderLink.vue  BlenderVersion.vue  LinkAddon.vue  LinkAddonList.vue  LinkItem.vue
src/utils/: addon.ts  link.ts
