[package]
name = "blender-link"
version = "0.1.2"
description = "Blender Addon link"
authors = ["小萌新"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blender_link_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = [] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-fs = "2.4.2"
#serde = { version = "1.0.228", features = ["derive"] }
#serde_json = "1.0.145"
#tauri-plugin-notification = { version = "2.3.1", features = [ "windows7-compat" ] }
